[package]
name = "neutopia"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
nom = "5.1.2"
byteorder = "1.3.4"
md5 = "0.7.0"
lazy_static = "1.4.0"
