[package]
name = "rando-web"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4.6"
neutopia = { path = "../neutopia" }
rando = { path = "../rando" }
regex = "1"
yew = "0.17"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"

[build-dependencies]
vergen = "3"
