[package]
name = "rando"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
neutopia = { path = "../neutopia" }
rand = "0.7.3"
structopt = "0.3.15"
