[package]
name = "rando"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
failure = "0.1.8"
ips = "0.1.0"
lazy_static = "1.4.0"
neutopia = { path = "../neutopia" }
radix_fmt = "1.0.0"
rand = "0.7.3"
rand_core = "0.5.1"
rand_pcg = "0.2.1"

[build-dependencies]
asm_build = { path = "../build/asm_build" }
failure = "0.1.8"
