[package]
name = "randofrontend"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>", "Michael de Lang <kingoipo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
byteorder = "1.3.4"
failure = "0.1.8"
randolib = { path = "../randolib" }
radix_fmt = "1.0.0"
stdweb = "0.4.20"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
rand_core = "0.5.1"
rand_pcg = "0.2.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  "console",
]

#[dependencies.web-sys]
#version = "0.3.4"
#features = [
#  'File'
#]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
