[package]
name = "randolib"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>", "Michael de Lang <kingoipo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
failure = "0.1.8"
neutopia = { path = "../neutopia" }
radix_fmt = "1.0.0"
rand = "0.7.3"
rand_core = "0.5.1"
rand_pcg = "0.2.1"
structopt = "0.3.15"
